Updated user and password variables

--- a/daemon/configurations/LTC/litecoin.conf
+++ b/daemon/configurations/LTC/litecoin.conf
@@ -52,8 +52,8 @@
 server=1
 
 # You must set rpcuser and rpcpassword to secure the JSON-RPC api
-rpcuser=user
-rpcpassword=password
+rpcuser=RPCADMINUSER
+rpcpassword=RPCADMINPASSWORD
 
 # How many seconds litecoin will wait for a complete RPC HTTP request.
 # after the HTTP connection is established.
