--- a/daemon/configurations/LTC/coin.conf
+++ b/daemon/configurations/LTC/coin.conf
@@ -105,6 +105,9 @@ rpcport=9332
 # Allows litecoind to operate with the BDB wallet disabled.
 #disablewallet=1
 
+# Change default data directory
+datadir=DATADIR
+
 # User interface options
 
 # Start Litecoin minimized
