--- a/daemon/configurations/NMC/coin.conf
+++ b/daemon/configurations/NMC/coin.conf
@@ -88,3 +88,6 @@ rpcport=8332
 # are more likely than free transactions to be included in generated blocks, so may
 # be validated sooner.
 #paytxfee=0.00
+
+# Change default data directory
+datadir=DATADIR
