--- a/daemon/configurations/PPC/coin.conf
+++ b/daemon/configurations/PPC/coin.conf
@@ -124,6 +124,9 @@ rpcport=9902
 # be validated sooner.
 #paytxfee=0.00
 
+# Change default data directory
+datadir=DATADIR
+
 # User interface options
 
 # Start Peercoin minimized
