--- a/daemon/configurations/DOGE/coin.conf
+++ b/daemon/configurations/DOGE/coin.conf
@@ -137,6 +137,9 @@ rpcport=9332
 # be validated sooner.
 #paytxfee=0.00
 
+# Change default data directory
+datadir=DATADIR
+
 # User interface options
 
 # Start Dogecoin minimized
