--- a/daemon/configurations/XPM/coin.conf
+++ b/daemon/configurations/XPM/coin.conf
@@ -146,6 +146,9 @@ rpcport=8332
 # >=550 = target to stay under in MiB.
 #prune=550
 
+# Change default data directory
+datadir=DATADIR
+
 # User interface options
 
 # Start Bitcoin minimized
