Enabled deprecated options for Kryptos support

--- a/daemon/configurations/BTC/coin.conf
+++ b/daemon/configurations/BTC/coin.conf
@@ -157,6 +157,10 @@ datadir=DATADIR
 # Minimize to the system tray
 #minimizetotray=1
 
+deprecatedrpc=accounts
+deprecatedrpc=validateaddress
+printtoconsole=1
+
 # [Sections]
 # Most options apply to mainnet, testnet and regtest.
 # If you want to confine an option to just one network, you should add it in the
