--- a/daemon/configurations/DOGE/coin.conf
+++ b/daemon/configurations/DOGE/coin.conf
@@ -140,6 +140,10 @@ rpcport=9332
 # Change default data directory
 datadir=DATADIR
 
+deprecatedrpc=accounts
+deprecatedrpc=validateaddress
+printtoconsole=1
+
 # User interface options
 
 # Start Dogecoin minimized
