--- a/daemon/configurations/NMC/coin.conf
+++ b/daemon/configurations/NMC/coin.conf
@@ -91,3 +91,7 @@ rpcport=8332
 
 # Change default data directory
 datadir=DATADIR
+
+deprecatedrpc=accounts
+deprecatedrpc=validateaddress
+printtoconsole=1
