--- a/daemon/configurations/XPM/coin.conf
+++ b/daemon/configurations/XPM/coin.conf
@@ -149,6 +149,10 @@ rpcport=8332
 # Change default data directory
 datadir=DATADIR
 
+deprecatedrpc=accounts
+deprecatedrpc=validateaddress
+printtoconsole=1
+
 # User interface options
 
 # Start Bitcoin minimized
