--- a/daemon/configurations/PPC/coin.conf
+++ b/daemon/configurations/PPC/coin.conf
@@ -134,3 +134,7 @@ datadir=DATADIR
 
 # Minimize to the system tray
 #minimizetotray=1
+
+deprecatedrpc=accounts
+deprecatedrpc=validateaddress
+printtoconsole=1
